@@ -28,7 +28,7 @@ BEGIN
       VALUE "OriginalFilename",		"libbde.dll\0"
       VALUE "ProductName",		"libbde\0"
       VALUE "ProductVersion",		"@VERSION@" "\0"
-      VALUE "Comments",			"For more information visit http://code.google.com/p/libbde\0"
+      VALUE "Comments",			"For more information visit https://github.com/libyal/libbde/\0"
     END
   END
   BLOCK "VarFileInfo"
