@@ -59,6 +59,7 @@ Format:
 
 20140928
 * removed README.macosx
+* changes for project site move
 
 20140731
 * bug fix in Python bindings
